; ModuleID = '/home/carl/AnghaBench/SoftEtherVPN/src/Cedar/extr_Console.c_GetCommandNameList.c'
source_filename = "/home/carl/AnghaBench/SoftEtherVPN/src/Cedar/extr_Console.c_GetCommandNameList.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [10 x i32] [i32 100, i32 117, i32 109, i32 109, i32 121, i32 95, i32 115, i32 116, i32 114, i32 0], align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32* @GetCommandNameList(i32* %0) #0 {
  %2 = alloca i32*, align 8
  %3 = alloca i32*, align 8
  %4 = alloca i32*, align 8
  store i32* %0, i32** %3, align 8
  %5 = load i32*, i32** %3, align 8
  %6 = icmp eq i32* %5, null
  br i1 %6, label %7, label %9

7:                                                ; preds = %1
  %8 = call i32* (...) @NullToken()
  store i32* %8, i32** %2, align 8
  br label %14

9:                                                ; preds = %1
  %10 = load i32*, i32** %3, align 8
  %11 = call i32 @ParseCommandEx(i32* %10, i8* bitcast ([10 x i32]* @.str to i8*), i32** %4)
  %12 = call i32 @Free(i32 %11)
  %13 = load i32*, i32** %4, align 8
  store i32* %13, i32** %2, align 8
  br label %14

14:                                               ; preds = %9, %7
  %15 = load i32*, i32** %2, align 8
  ret i32* %15
}

declare dso_local i32* @NullToken(...) #1

declare dso_local i32 @Free(i32) #1

declare dso_local i32 @ParseCommandEx(i32*, i8*, i32**) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
